Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

** Use the notes.html file instead of this file for change notes?

Thanks!


2.3.0.2301
----------
- Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.


2.3.0.2300
----------
WARNING: MAC OS X 10.3 PANTHER USERS SHOULD NOT DOWNLOAD THIS! IT WON'T RUN.

- Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
- Add folder ordering option (manually or by name).
- Improvement to Send Link for multiple links and escaped characters. (Patch from Anmol Khirbat).
- Change standard product URLs to the new www.vienna-rss.org web site.
- Bug fix: Truncated Headings in LA Times Feeds
- Bug fix: Unescaped HTML in titles.
- Bug fix: Incorrect document URL shown after downloads.
- Bug fix: Option-clicking the close tab widget closed the main Articles tab.
- Add Kaku http://ppmweb.lolipop.jp/apps/kaku to the list of supported blog editors.

2.2.3.2213
----------
- Change standard product URLs to the new www.vienna-rss.org web site.
- Improvement to Send Link for multiple links and escaped characters. (Patch from Anmol Khirbat).

2.2.2.2212
----------
- Fix cookie handling on Leopard. (This could cause crashes.)
- Fix error in Spanish translation. (Thanks to Ramon.)

2.2.2.2211
----------
- Fix crash when web page attempts to open pop-under window.

2.2.1.2210
----------
- Fix appearance of search field in toolbar when using small size.
- Fix the visual glitch in which the unread count and progress indicator were slightly overlapping
  with the scroll bar if present.
- Update the styles menu in the toolbar when adding a style.
- Added Portuguese localisation. (Thanks to Rui Carlos A. Gon√ßalves).
- Added Turkish localisation. (Thanks to Emrah Omuris).
- Updated German, Italian, Traditional Chinese, and Ukranian localisations.